--- a/src/composer.json
+++ b/src/composer.json
@@ -34,7 +34,8 @@
         "hyperf/utils": "3.0.*",
         "hyperf/server": "3.0.*",
         "guzzlehttp/guzzle": "^7.0",
-        "guzzlehttp/psr7": "^2.0"
+        "guzzlehttp/psr7": "^2.0",
+        "hyperf/devtool": "3.0.*"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
