Update github workflow for test
Signed-off-by: huangzhhui <huangzhwork@gmail.com>

--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -21,7 +21,8 @@ jobs:
       - name: Download box
         id: download_box
         run: |
-          wget https://github.com/hyperf/box/releases/download/v0.0.1/box -O ./base-box
+          gh release download -R hyperf/box -p 'box'
+          mv box base-box
 
       - name: Build self
         id: build_self
