Update github workflow for test
Signed-off-by: huangzhhui <huangzhwork@gmail.com>

--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Download box
         id: download_box
         run: |
-          gh release download -R hyperf/box -p 'box'
+          gh release download -R hyperf/box -p box
           mv box base-box
 
       - name: Build self
