--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -15,7 +15,7 @@ jobs:
         arch: ["x86_64", "arm64"]
       max-parallel: 4
     env:
-      GITHUB_TOKEN: ${{GITHUB_ACCESS_TOKEN}}
+      GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
