Update github workflow for test
Signed-off-by: huangzhhui <huangzhwork@gmail.com>

--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -25,6 +25,7 @@ jobs:
         run: |
           gh release download -R hyperf/box -p box
           mv box base-box
+          chmod 755 ./base-box
 
       - name: Build self
         id: build_self
