--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -30,6 +30,9 @@ jobs:
       - name: Build self
         id: build_self
         run: |
+          ./base-box version
+          ./base-box build-prepare
+          ./base-box php -v
           ./base-box build-self -o=./box
 
       - name: Upload artifact for box
