--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -23,9 +23,9 @@ jobs:
       - name: Download box
         id: download_box
         run: |
-          gh release download v0.0.1 -R hyperf/box -p box
-          mv box base-box
-          chmod 755 ./base-box
+          gh run download 2554976476 -R dixyes/lwmbs -n cli_8.1_x86_64_836852491eee2c2b98994ca7833ea748bb391fdbfd102f160d56e7d769ccf153
+          mv cli_8.1_x86_64_836852491eee2c2b98994ca7833ea748bb391fdbfd102f160d56e7d769ccf153 cli
+          chmod 755 ./cli
 
       - name: Build self
         id: build_self
