--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -24,15 +24,13 @@ jobs:
         id: download_box
         run: |
           gh run download 2554976476 -R dixyes/lwmbs -n cli_8.1_x86_64_836852491eee2c2b98994ca7833ea748bb391fdbfd102f160d56e7d769ccf153
-          ls -a
-          mv cli_8.1_x86_64_836852491eee2c2b98994ca7833ea748bb391fdbfd102f160d56e7d769ccf153 cli
-          chmod 755 ./cli
+          chmod 755 ./php
 
       - name: Build self
         id: build_self
         run: |
-          ./cli src/bin/hyperf.php build-prepare
-          ./cli src/bin/hyperf.php build-self -o=./box
+          ./php src/bin/hyperf.php build-prepare
+          ./php src/bin/hyperf.php build-self -o=./box
 
       - name: Upload artifact for box
         if: steps.box.outcome == 'success'
