--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -20,11 +20,22 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Download box
-        id: download_box
+      - name: Download PHP Cli
+        id: php_cli
         run: |
           gh run download 2554976476 -R dixyes/lwmbs -n cli_8.1_x86_64_836852491eee2c2b98994ca7833ea748bb391fdbfd102f160d56e7d769ccf153
           chmod 755 ./php
+
+      - name: Download Composer
+        id: composer
+        run: |
+          wget https://getcomposer.org/download/2.3.7/composer.phar
+          chmod 755 ./composer.phar
+
+      - name: Vendor Installation
+        id: vendor_installation
+        run: |
+          ./php ./composer.phar install -o
 
       - name: Build self
         id: build_self
