Update github workflow for test
Signed-off-by: huangzhhui <huangzhwork@gmail.com>

--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -36,7 +36,7 @@ jobs:
         id: vendor_installation
         run: |
           cd src
-          ./php ./composer.phar install -o
+          ../php ../composer.phar install -o
 
       - name: Build self
         id: build_self
