Update github workflow for test
Signed-off-by: huangzhhui <huangzhwork@gmail.com>

--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -48,6 +48,7 @@ jobs:
       - name: Build self
         id: build_self
         run: |
+          ./php src/bin/hyperf.php config set github.access-token ${{ env.GITHUB_TOKEN }}
           ./php src/bin/hyperf.php build-prepare
           ./php src/bin/hyperf.php build-self -o=./box
 
