--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -50,7 +50,8 @@ jobs:
         run: |
           ./php src/bin/hyperf.php config set github.access-token ${{ env.GITHUB_TOKEN }}
           ./php src/bin/hyperf.php build-prepare
-          ./php src/bin/hyperf.php build-self -o=/Users/runner/.box/box
+          ./php src/bin/hyperf.php build-self --no-dev
+          mv ~/.box/box ./box
 
       - name: Upload artifact for box
         if: steps.box.outcome == 'success'
