Update github workflow for test
Signed-off-by: huangzhhui <huangzhwork@gmail.com>

--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -47,6 +47,7 @@ jobs:
 
       - name: Build Box
         id: box
+        continue-on-error: true
         run: |
           echo ${GITHUB_WORKSPACE}
           ./php src/bin/hyperf.php config set github.access-token ${{ env.GITHUB_TOKEN }}
