--- a/.github/workflows/linux.yaml
+++ b/.github/workflows/linux.yaml
@@ -1,4 +1,4 @@
-name: MacOS build
+name: Linux build
 
 on:
   workflow_dispatch:
@@ -7,12 +7,12 @@ on:
 jobs:
   macos:
     name: PHP ${{ matrix.php-version }} ${{ matrix.arch }}
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         php-version: ["8.1", "8.0"]
-        arch: ["x86_64", "arm64"]
+        arch: ["x86_64", "aarch64"]
       max-parallel: 4
     env:
       GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
@@ -23,7 +23,8 @@ jobs:
       - name: Download PHP Cli
         id: php_cli
         run: |
-          gh run download 2554976476 -R dixyes/lwmbs -n cli_8.1_x86_64_836852491eee2c2b98994ca7833ea748bb391fdbfd102f160d56e7d769ccf153
+          gh run download 2559455962 -R dixyes/lwmbs -n cli_static_8.1_glibc_${{ matrix.arch }}_836852491eee2c2b98994ca7833ea748bb391fdbfd102f160d56e7d769ccf153
+          ls -a
           chmod 755 ./php
 
       - name: Download Composer
