--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -16,6 +16,8 @@ jobs:
       max-parallel: 4
     env:
       GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      MICRO_CLI_RUN_ID: 2554976476
+      MICRO_CLI_ARTIFACT_HASH: 836852491eee2c2b98994ca7833ea748bb391fdbfd102f160d56e7d769ccf153
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -23,13 +25,13 @@ jobs:
       - name: Download PHP Cli
         id: php_cli
         run: |
-          gh run download 2554976476 -R dixyes/lwmbs -n cli_8.1_x86_64_836852491eee2c2b98994ca7833ea748bb391fdbfd102f160d56e7d769ccf153
+          gh run download ${{ env.MICRO_CLI_RUN_ID }} -R dixyes/lwmbs -n cli_${{ matrix.php-version }}_${{ matrix.arch }}_${{ MICRO_CLI_ARTIFACT_HASH }}
           chmod 755 ./php
 
       - name: Download Composer
         id: composer
         run: |
-          wget https://getcomposer.org/download/2.3.7/composer.phar
+          wget https://getcomposer.org/download/${{ COMPOSER_VERSION }}/composer.phar
           chmod 755 ./composer.phar
 
       - name: Vendor Installation
