--- a/.github/workflows/linux.yaml
+++ b/.github/workflows/linux.yaml
@@ -16,15 +16,15 @@ jobs:
       max-parallel: 4
     env:
       GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-      MICRO_CLI_RUN_ID: "2559455962"
-      MICRO_CLI_ARTIFACT_HASH: "836852491eee2c2b98994ca7833ea748bb391fdbfd102f160d56e7d769ccf153"
-      COMPOSER_VERSION: "2.3.7"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Download PHP Cli
         id: php_cli
+        env:
+          MICRO_CLI_RUN_ID: 2559455962
+          MICRO_CLI_ARTIFACT_HASH: 836852491eee2c2b98994ca7833ea748bb391fdbfd102f160d56e7d769ccf153
         run: |
           gh run download ${{ env.MICRO_CLI_RUN_ID }} -R dixyes/lwmbs -n cli_static_${{ matrix.php-version }}_glibc_${{ matrix.arch }}_${{ MICRO_CLI_ARTIFACT_HASH }}
           ls -a
@@ -32,6 +32,8 @@ jobs:
 
       - name: Download Composer
         id: composer
+        env:
+          COMPOSER_VERSION: 2.3.7
         run: |
           wget https://getcomposer.org/download/${{ COMPOSER_VERSION }}/composer.phar
           chmod 755 ./composer.phar
