--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -22,19 +22,14 @@ jobs:
 
       - name: Download PHP Cli
         id: php_cli
-        env:
-          MICRO_CLI_RUN_ID: "2554976476"
-          MICRO_CLI_ARTIFACT_HASH: "836852491eee2c2b98994ca7833ea748bb391fdbfd102f160d56e7d769ccf153"
         run: |
-          gh run download ${{ env.MICRO_CLI_RUN_ID }} -R dixyes/lwmbs -n cli_${{ matrix.php-version }}_${{ matrix.arch }}_${{ MICRO_CLI_ARTIFACT_HASH }}
+          gh run download 2554976476 -R dixyes/lwmbs -n cli_${{ matrix.php-version }}_${{ matrix.arch }}_836852491eee2c2b98994ca7833ea748bb391fdbfd102f160d56e7d769ccf153
           chmod 755 ./php
 
       - name: Download Composer
         id: composer
-        env:
-          COMPOSER_VERSION: "2.3.7"
         run: |
-          wget https://getcomposer.org/download/${{ COMPOSER_VERSION }}/composer.phar
+          wget https://getcomposer.org/download/2.3.7/composer.phar
           chmod 755 ./composer.phar
 
       - name: Vendor Installation
