--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Download PHP Cli
         id: php_cli
         run: |
-          gh run download 2554976476 -R dixyes/lwmbs -n cli_${{ matrix.php-version }}_${{ matrix.arch }}_836852491eee2c2b98994ca7833ea748bb391fdbfd102f160d56e7d769ccf153
+          gh run download 2554976476 -R dixyes/lwmbs -p "cli_${{ matrix.php-version }}_${{ matrix.arch }}*"
           chmod 755 ./php
 
       - name: Download Composer
