--- a/.github/workflows/linux.yaml
+++ b/.github/workflows/linux.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: ["8.1", "8.0"]
+        php-version: ["8.1"]
         arch: ["x86_64", "aarch64"]
       max-parallel: 4
     env:
