--- a/.github/workflows/linux.yaml
+++ b/.github/workflows/linux.yaml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         php-version: ["8.1"]
-        arch: ["x86_64", "aarch64"]
+        arch: ["x86_64"]
       max-parallel: 4
     env:
       GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
@@ -52,7 +52,6 @@ jobs:
           ./php src/bin/hyperf.php config set github.access-token ${{ env.GITHUB_TOKEN }}
           ./php src/bin/hyperf.php config set-php-version ${{ matrix.php-version }}
           ./php src/bin/hyperf.php build-prepare
-          ls -a
           ./php src/bin/hyperf.php build-self --no-dev
           mv ~/.box/box ./box
 
