--- a/src/composer.json
+++ b/src/composer.json
@@ -38,10 +38,9 @@
         "hyperf/devtool": "3.0.*"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.0",
+        "friendsofphp/php-cs-fixer": "^3.9",
         "mockery/mockery": "^1.0",
-        "phpstan/phpstan": "^0.12",
-        "friendsofphp/php-cs-fixer": "^3.8"
+        "phpstan/phpstan": "^0.12"
     },
     "autoload": {
         "psr-4": {
