--- a/.github/workflows/linux.yaml
+++ b/.github/workflows/linux.yaml
@@ -68,6 +68,18 @@ jobs:
         if: steps.box.outcome != 'success'
         run: |
           false
+
+      - name: Upload Release Asset
+        if: steps.box.outcome == 'success'
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./box
+          asset_name: box_${{ matrix.arch }}.zip
+          asset_content_type: application/zip
   arm64:
     name: PHP ${{ matrix.php-version }} ${{ matrix.arch }}
     runs-on: [self-hosted, linux, arm64]
@@ -131,3 +143,15 @@ jobs:
         if: steps.box.outcome != 'success'
         run: |
           false
+
+      - name: Upload Release Asset
+        if: steps.box.outcome == 'success'
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./box
+          asset_name: box_${{ matrix.arch }}.zip
+          asset_content_type: application/zip
