--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -68,3 +68,15 @@ jobs:
         if: steps.box.outcome != 'success'
         run: |
           false
+
+      - name: Upload Release Asset
+        if: steps.box.outcome == 'success'
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./box
+          asset_name: box_${{ matrix.arch }}.zip
+          asset_content_type: application/zip
