--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -76,7 +76,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ steps.box.outputs.upload_url }}
           asset_path: ./box
           asset_name: box_${{ matrix.arch }}.zip
           asset_content_type: application/zip
