--- a/.github/workflows/linux.yaml
+++ b/.github/workflows/linux.yaml
@@ -68,6 +68,19 @@ jobs:
         if: steps.box.outcome != 'success'
         run: |
           false
+          steps:
+
+      - name: Create release
+        if: steps.box.outcome == 'success'
+        id: create_release
+        uses: actions/create-release@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          draft: false
+          prerelease: true
 
       - name: Upload Release Asset
         if: steps.box.outcome == 'success'
@@ -76,7 +89,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.box.outputs.upload_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./box
           asset_name: box_${{ matrix.arch }}.zip
           asset_content_type: application/zip
@@ -143,6 +156,19 @@ jobs:
         if: steps.box.outcome != 'success'
         run: |
           false
+
+      - name: Create release
+        if: steps.box.outcome == 'success'
+        id: create_release
+        uses: actions/create-release@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          draft: false
+          prerelease: true
+
 
       - name: Upload Release Asset
         if: steps.box.outcome == 'success'
