--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -69,6 +69,18 @@ jobs:
         run: |
           false
 
+      - name: Create release
+        if: steps.box.outcome == 'success'
+        id: create_release
+        uses: actions/create-release@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          draft: false
+          prerelease: true
+
       - name: Upload Release Asset
         if: steps.box.outcome == 'success'
         id: upload-release-asset
