--- a/.github/workflows/linux.yaml
+++ b/.github/workflows/linux.yaml
@@ -70,17 +70,11 @@ jobs:
           false
           steps:
 
-      - name: Create release
-        if: steps.box.outcome == 'success'
-        id: create_release
-        uses: actions/create-release@latest
+      - name: Get release
+        id: get_release
+        uses: bruceadams/get-release@v1.2.3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          draft: false
-          prerelease: true
 
       - name: Upload Release Asset
         if: steps.box.outcome == 'success'
@@ -89,7 +83,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: ./box
           asset_name: box_${{ matrix.arch }}.zip
           asset_content_type: application/zip
@@ -157,17 +151,11 @@ jobs:
         run: |
           false
 
-      - name: Create release
-        if: steps.box.outcome == 'success'
-        id: create_release
-        uses: actions/create-release@latest
+      - name: Get release
+        id: get_release
+        uses: bruceadams/get-release@v1.2.3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          draft: false
-          prerelease: true
 
 
       - name: Upload Release Asset
@@ -177,7 +165,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: ./box
-          asset_name: box_${{ matrix.arch }}.zip
-          asset_content_type: application/zip
+          asset_name: box_${{ matrix.arch }}
