Added Upload Release Asset CI

--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Download PHP Cli
         id: php_cli
         run: |
-          gh run download 2554976476 -R dixyes/lwmbs -n cli_${{ matrix.php-version }}_${{ matrix.arch }}_836852491eee2c2b98994ca7833ea748bb391fdbfd102f160d56e7d769ccf153
+          gh run download 3102976077 -R dixyes/lwmbs -n cli_${{ matrix.php-version }}_${{ matrix.arch }}_66708887d489fdf980d2c5a1c6d9b1f040d1f739ab19944385c9e129a6d4176a
           chmod 755 ./php
 
       - name: Download Composer
@@ -84,4 +84,4 @@ jobs:
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: ./box
-          asset_name: box_${{ matrix.arch }}.zip
+          asset_name: box_${{ matrix.arch }}
