--- a/.github/workflows/linux.yaml
+++ b/.github/workflows/linux.yaml
@@ -85,8 +85,7 @@ jobs:
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: ./box
-          asset_name: box_${{ matrix.arch }}.zip
-          asset_content_type: application/zip
+          asset_name: box_${{ matrix.arch }}
   arm64:
     name: PHP ${{ matrix.php-version }} ${{ matrix.arch }}
     runs-on: [self-hosted, linux, arm64]
@@ -156,7 +155,6 @@ jobs:
         uses: bruceadams/get-release@v1.2.3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
 
       - name: Upload Release Asset
         if: steps.box.outcome == 'success'
