Print the box version while building
Signed-off-by: huangzhhui <huangzhwork@gmail.com>

--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -55,6 +55,7 @@ jobs:
           ./php src/bin/hyperf.php build-prepare
           ./php src/bin/hyperf.php build-self --no-dev
           mv ~/.box/box ./box
+          ./box version
 
       - name: Upload artifact for box
         if: steps.box.outcome == 'success'
