--- a/.github/workflows/linux_pr.yaml
+++ b/.github/workflows/linux_pr.yaml
@@ -14,7 +14,8 @@ jobs:
         arch: ["x86_64"]
       max-parallel: 4
     env:
-      GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
