Rename the artifact name that in Github Actions

--- a/.github/workflows/macos_pr.yaml
+++ b/.github/workflows/macos_pr.yaml
@@ -58,7 +58,7 @@ jobs:
         if: steps.box.outcome == 'success'
         uses: actions/upload-artifact@v3
         with:
-          name: box_${{ matrix.arch }}
+          name: box_${{ matrix.arch }}_macos
           path: |
             box
 
