--- a/.github/workflows/windows_release.yaml
+++ b/.github/workflows/windows_release.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Download Composer
         id: composer
         run: |
-          wget https://getcomposer.org/download/2.3.7/composer.phar
+          curl -o composer.phar https://getcomposer.org/download/2.3.7/composer.phar
 
       - name: Vendor Installation
         id: vendor_installation
@@ -84,5 +84,5 @@ jobs:
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: ./box
-          asset_name: box_${{ matrix.arch }}_linux
+          asset_name: box_${{ matrix.arch }}_windows
           asset_content_type: application/x-sh
