--- a/.github/workflows/windows_pr.yaml
+++ b/.github/workflows/windows_pr.yaml
@@ -50,14 +50,14 @@ jobs:
           ./php src/bin/hyperf.php config set-php-version ${{ matrix.php-version }}
           ./php src/bin/hyperf.php build-prepare
           ./php src/bin/hyperf.php build-self --no-dev
-          mv ~/.box/box ./box
+          mv ~/.box/box,exe ./box.exe
           ./box version
 
       - name: Upload artifact for box
         if: steps.box.outcome == 'success'
         uses: actions/upload-artifact@v3
         with:
-          name: box_${{ matrix.arch }}_windows
+          name: box_${{ matrix.arch }}_windows.exe
           path: |
             box
 
