--- a/.github/workflows/windows_pr.yaml
+++ b/.github/workflows/windows_pr.yaml
@@ -50,8 +50,8 @@ jobs:
           ./php src/bin/hyperf.php config set-php-version ${{ matrix.php-version }}
           ./php src/bin/hyperf.php build-prepare
           ./php src/bin/hyperf.php build-self --no-dev
-          mv ~/.box/box,exe ./box.exe
-          ./box version
+          mv ~/.box/box.exe ./box.exe
+          ./box.exe version
 
       - name: Upload artifact for box
         if: steps.box.outcome == 'success'
@@ -59,7 +59,7 @@ jobs:
         with:
           name: box_${{ matrix.arch }}_windows.exe
           path: |
-            box
+            box.exe
 
       - name: Fail if box build failed
         if: steps.box.outcome != 'success'
