Add aarch64 CI and update the job id of lwmbs
Signed-off-by: huangzhhui <huangzhwork@gmail.com>

--- a/.github/workflows/linux_pr.yaml
+++ b/.github/workflows/linux_pr.yaml
@@ -22,14 +22,14 @@ jobs:
       - name: Download PHP Cli
         id: php_cli
         run: |
-          gh run download 3156437692 -R dixyes/lwmbs -n cli_static_${{ matrix.php-version }}_musl_${{ matrix.arch }}_66708887d489fdf980d2c5a1c6d9b1f040d1f739ab19944385c9e129a6d4176a
+          gh run download 3458608164 -R dixyes/lwmbs -n cli_static_${{ matrix.php-version }}_musl_${{ matrix.arch }}_4a49a73ed0d2c889c319df5a8eba65257673730ee5e23fe5e9d9ff7e7ff97454
           ls -a
           chmod 755 ./php
 
       - name: Download Composer
         id: composer
         run: |
-          wget https://getcomposer.org/download/2.3.7/composer.phar
+          wget https://getcomposer.org/download/2.4.4/composer.phar
           chmod 755 ./composer.phar
 
       - name: Vendor Installation
@@ -41,6 +41,71 @@ jobs:
       - name: Create ~/.box folder
         id: create_folder
         run: |    
+          cd ~
+          mkdir .box
+          chmod 755 .box
+
+      - name: Build Box
+        id: box
+        continue-on-error: true
+        run: |
+          ./php src/bin/hyperf.php config set github.access-token ${{ env.GITHUB_TOKEN }}
+          ./php src/bin/hyperf.php config set-php-version ${{ matrix.php-version }}
+          ./php src/bin/hyperf.php build-prepare
+          ./php src/bin/hyperf.php build-self --no-dev
+          mv ~/.box/box ./box
+          ./box version
+
+      - name: Upload artifact for box
+        if: steps.box.outcome == 'success'
+        uses: actions/upload-artifact@v3
+        with:
+          name: box_${{ matrix.arch }}_linux
+          path: |
+            box
+
+      - name: Fail if box build failed
+        if: steps.box.outcome != 'success'
+        run: |
+          false
+          steps:
+  aarch64:
+    name: PHP ${{ matrix.php-version }} ${{ matrix.arch }}
+    runs-on: [self-hosted, linux, arm64]
+    strategy:
+      fail-fast: false
+      matrix:
+        php-version: [ "8.1" ]
+        arch: [ "aarch64" ]
+      max-parallel: 4
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Download PHP Cli
+        id: php_cli
+        run: |
+          gh run download 3458608164 -R dixyes/lwmbs -n cli_static_${{ matrix.php-version }}_musl_${{ matrix.arch }}_4a49a73ed0d2c889c319df5a8eba65257673730ee5e23fe5e9d9ff7e7ff97454
+          ls -a
+          chmod 755 ./php
+
+      - name: Download Composer
+        id: composer
+        run: |
+          wget https://getcomposer.org/download/2.4.4/composer.phar
+          chmod 755 ./composer.phar
+
+      - name: Vendor Installation
+        id: vendor_installation
+        run: |
+          cd src
+          ../php ../composer.phar install -o
+
+      - name: Create ~/.box folder
+        id: create_folder
+        run: |
           cd ~
           mkdir .box
           chmod 755 .box
