--- a/.github/workflows/linux_release.yaml
+++ b/.github/workflows/linux_release.yaml
@@ -91,7 +91,7 @@ jobs:
           asset_content_type: application/x-sh
   aarch64:
     name: PHP ${{ matrix.php-version }} ${{ matrix.arch }}
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, ARM64]
     strategy:
       fail-fast: false
       matrix:
