--- a/.github/workflows/linux_pr.yaml
+++ b/.github/workflows/linux_pr.yaml
@@ -71,7 +71,7 @@ jobs:
           steps:
   aarch64:
     name: PHP ${{ matrix.php-version }} ${{ matrix.arch }}
-    runs-on: [self-hosted, Linux, ARM64]
+    runs-on: [self-hosted, linux, arm64]
     strategy:
       fail-fast: false
       matrix:
