--- a/.github/workflows/linux_release.yaml
+++ b/.github/workflows/linux_release.yaml
@@ -44,6 +44,7 @@ jobs:
         id: create_folder
         run: |    
           cd ~
+          rm -rf .box
           mkdir .box
           chmod 755 .box
 
@@ -57,6 +58,7 @@ jobs:
           ./php src/bin/hyperf.php build-self --no-dev
           mv ~/.box/box ./box
           ./box version
+          rm -rf ~/.box
 
       - name: Upload artifact for box
         if: steps.box.outcome == 'success'
