--- a/.github/workflows/macos_release.yaml
+++ b/.github/workflows/macos_release.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Download PHP Cli
         id: php_cli
         run: |
-          gh run download 3710322403 -R dixyes/lwmbs -n cli_${{ matrix.php-version }}_${{ matrix.arch }}_b3a0e7a7de2ddfe1eb26b2ae56232604f4c6d52ed55b2e41a2a26961673db97d
+          gh run download 3710322403 -R hyperf/lwmbs -n cli_${{ matrix.php-version }}_${{ matrix.arch }}_b3a0e7a7de2ddfe1eb26b2ae56232604f4c6d52ed55b2e41a2a26961673db97d
           chmod 755 ./php
 
       - name: Download Composer
