--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -1,19 +1,20 @@
-name: MacOS build
+name: Windows build
 
 on:
+  pull_request:
   push:
     tags:
       - '*'
 
 jobs:
-  macos:
+  x86_64:
     name: PHP ${{ matrix.php-version }} ${{ matrix.arch }}
-    runs-on: macos-latest
+    runs-on: windows-latest
     strategy:
       fail-fast: false
       matrix:
         php-version: ["8.1"]
-        arch: ["x86_64"]
+        arch: ["x64"]
       max-parallel: 4
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -24,14 +25,13 @@ jobs:
       - name: Download PHP Cli
         id: php_cli
         run: |
-          gh run download 3826009291 -R hyperf/lwmbs -n cli_${{ matrix.php-version }}_${{ matrix.arch }}_ad4bf78451bf9894c4711694556132cc8f268ebf4a4607ba487984cdd338efad
-          chmod 755 ./php
+          gh run download 3825884688 -R hyperf/lwmbs -n cli_${{ matrix.php-version }}_${{ matrix.arch }}_ad4bf78451bf9894c4711694556132cc8f268ebf4a4607ba487984cdd338efad
+          ls -File
 
       - name: Download Composer
         id: composer
         run: |
-          wget https://getcomposer.org/download/2.3.7/composer.phar
-          chmod 755 ./composer.phar
+          curl -o composer.phar https://getcomposer.org/download/2.3.7/composer.phar
 
       - name: Vendor Installation
         id: vendor_installation
@@ -44,7 +44,6 @@ jobs:
         run: |    
           cd ~
           mkdir .box
-          chmod 755 .box
 
       - name: Build Box
         id: box
@@ -54,35 +53,39 @@ jobs:
           ./php src/bin/hyperf.php config set-php-version ${{ matrix.php-version }}
           ./php src/bin/hyperf.php build-prepare
           ./php src/bin/hyperf.php build-self --no-dev
-          mv ~/.box/box ./box
+          mv ~/.box/box.exe ./box.exe
+          ./box.exe version
 
       - name: Upload artifact for box
         if: steps.box.outcome == 'success'
         uses: actions/upload-artifact@v3
         with:
-          name: box_${{ matrix.arch }}
+          name: box_${{ matrix.arch }}.exe
           path: |
-            box
+            box.exe
 
       - name: Fail if box build failed
         if: steps.box.outcome != 'success'
         run: |
           false
+          steps:
 
       - name: Get release
         id: get_release
         uses: bruceadams/get-release@v1.2.3
+        continue-on-error: true
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Release Asset
-        if: steps.box.outcome == 'success'
+        if: steps.box.outcome == 'success' && steps.get_release.outputs.upload_url
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
-          asset_path: ./box
-          asset_name: box_${{ matrix.arch }}_macos
+          asset_path: ./box.exe
+          asset_name: box_${{ matrix.arch }}_windows.exe
           asset_content_type: application/x-sh
